# ai-storybot

./: .env  extract.py  hello.py  main.py  postgres.py  pyproject.toml  requirements.txt
chroma_database/: chroma.sqlite3
chroma_database_edumate/: chroma.sqlite3
