[project]
name = "ai-storybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.20",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gdown>=5.2.0",
    "google-generativeai>=0.8.5",
    "patool>=4.0.1",
    "psycopg2>=2.9.10",
    "rarfile>=4.2",
    "requests>=2.32.5",
]
